# firmware

./: README.md  license.txt
bmdware/: .gitignore
bmdware/common/: bootloader_info.c  crc.c  crc.h  (+25 more)
bootloader/: .gitignore  CMakeLists.txt
bootloader/bl_3_2_1_fix_app/examples/peripheral/flashwrite/: main.c  rigdfu2_nrf52_s132_rel_3.2.3.45.bin.h
bootloader/bl_3_2_1_fix_app/examples/peripheral/flashwrite/pca10040/arm5_no_packs/: flashwrite_pca10040.uvprojx
bootloader/build-tools/: make_bin.bat
bootloader/build-tools/genimage/: .gitignore  README.md  genimage.py
bootloader/lib/crypto/: ltc_nrf.c  ltc_nrf.h  test.c
bootloader/lib/crypto/encauth/eax/: eax_done.c  eax_init.c
bootloader/lib/crypto/headers/: tomcrypt.h  tomcrypt_cipher.h  tomcrypt_custom.h
bootloader/lib/crypto/mac/omac/: omac_done.c  omac_init.c  omac_process.c
bootloader/lib/crypto/modes/ctr/: ctr_done.c  ctr_encrypt.c  ctr_start.c
bootloader/lib/dfu/: dfu_transport_serial.c  dfu_transport_serial.h
bootloader/lib/heatshrink/: heatshrink_config.h  heatshrink_decoder.c  heatshrink_decoder.h
bootloader/lib/info/: rig_firmware_info.c  rig_firmware_info.h
bootloader/lib/patch/: bspatch.c  bspatch.h  patcher.c  patcher.h
bootloader/lib/rigado/: rigdfu.c  rigdfu.h  rigdfu_serial.c  rigdfu_serial.h  rigdfu_util.c  rigdfu_util.h
bootloader/lib/utils/: crc32.c  crc32.h  fstorage.c  fstorage.h  queue.c  queue.h
bootloader/nordicsemi/dfu/: ble_dfu.c  ble_dfu.h  bootloader.c  bootloader.h  bootloader_settings.c  bootloader_types.h  dfu.h  dfu_bank_internal.h  dfu_dual_bank.c  dfu_transport_ble.c  dfu_transport_ble.h  dfu_types.h
bootloader/nordicsemi/mempool/: hci_mem_pool_ble.c  hci_mem_pool_ble.h  hci_mem_pool_internal.h
bootloader/nordicsemi/other/: simple_uart.c  simple_uart.h
bootloader/nordicsemi/sdk10/SVD/: nrf51.svd  nrf52.svd
bootloader/nordicsemi/sdk10/components/ble/ble_db_discovery/: ble_db_discovery.c  ble_db_discovery.h
bootloader/nordicsemi/sdk10/components/ble/ble_services/ble_ancs_c/: ble_ancs_c.c
bootloader/nordicsemi/sdk10/components/ble/ble_services/ble_ans_c/: ble_ans_c.c
bootloader/nordicsemi/sdk10/components/ble/ble_services/ble_bas_c/: ble_bas_c.c
bootloader/nordicsemi/sdk10/components/ble/ble_services/ble_hrs_c/: ble_hrs_c.c
bootloader/nordicsemi/sdk10/components/ble/ble_services/ble_lbs/: ble_lbs.c  ble_lbs.h
bootloader/nordicsemi/sdk10/components/ble/ble_services/ble_nus_c/: ble_nus_c.c  ble_nus_c.h
bootloader/nordicsemi/sdk10/components/ble/ble_services/ble_rscs_c/: ble_rscs_c.c
bootloader/nordicsemi/sdk10/components/ble/ble_services/experimental_ble_lns/: ble_lns.c  ble_lns.h
bootloader/nordicsemi/sdk10/components/ble/common/: ble_conn_state.c  ble_conn_state.h  ble_gatt_db.h
bootloader/nordicsemi/sdk10/components/ble/peer_manager/: gatt_cache_manager.c  gatt_cache_manager.h  gattc_cache_manager.c  gattc_cache_manager.h  gatts_cache_manager.c  gatts_cache_manager.h  id_manager.c  id_manager.h  peer_data.c  peer_data.h  peer_data_storage.c  peer_data_storage.h  peer_database.c  peer_database.h  peer_id.c  peer_id.h  peer_manager.c  peer_manager.h  peer_manager_types.h  pm_buffer.c  pm_buffer.h  pm_mutex.c  pm_mutex.h  security_dispatcher.c  security_dispatcher.h  security_manager.c  security_manager.h
bootloader/nordicsemi/sdk10/components/libraries/ant_fs/: antfs.c
bootloader/nordicsemi/sdk10/components/libraries/experimental_section_vars/: section_vars.h
bootloader/nordicsemi/sdk10/components/libraries/fds/: fds.c  fds.h  fds_config.h  fds_types_internal.h
bootloader/nordicsemi/sdk10/components/libraries/fstorage/: fstorage.c  fstorage.h  fstorage_config.h
bootloader/nordicsemi/sdk10/components/libraries/gpiote/: app_gpiote.c
bootloader/nordicsemi/sdk10/components/libraries/hci/: hci_transport.c
bootloader/nordicsemi/sdk10/components/libraries/low_power_pwm/: low_power_pwm.c  low_power_pwm.h
bootloader/nordicsemi/sdk10/components/libraries/mem_manager/: mem_manager.c
bootloader/nordicsemi/sdk10/components/libraries/pwm/: app_pwm.c
bootloader/nordicsemi/sdk10/components/libraries/timer/: app_timer_ble_gzll.c  app_timer_rtx.c
bootloader/nordicsemi/sdk10/components/libraries/twi/: app_twi.c
bootloader/nordicsemi/sdk10/components/libraries/uart/: app_uart.c
bootloader/nordicsemi/sdk10/components/libraries/util/: app_error.c  nrf_log.c  nrf_log.h  sdk_mapped_flags.c  sdk_resources.h
bootloader/nordicsemi/sdk10/components/toolchain/gcc/: nrf5x_common.ld
bootloader/nordicsemi/sdk10/components/toolchain/iar/: iar_startup_nrf51.s  iar_startup_nrf52.s
bootloader/nordicsemi/sdk10/examples/bsp/: bsp.c
bootloader/nordicsemi/sdk11/components/libraries/bootloader_dfu/: bootloader_settings.c
bootloader/nordicsemi/sdk11/components/softdevice/s332/doc/: ANT S212 and S332 license.txt  ANT_s332_nrf52832_0.9.1.alpha_readme.txt
bootloader/nordicsemi/sdk11/components/softdevice/s332/headers/: ant_error.h  ant_interface.h  ant_parameters.h  nrf_error.h  nrf_sdm.h  nrf_soc.h
bootloader/nordicsemi/sdk12/components/ble/common/: ble_advdata.c
bootloader/nordicsemi/sdk12/components/libraries/bootloader/: nrf_bootloader_app_start.c  nrf_bootloader_info.c
bootloader/nordicsemi/sdk12/components/libraries/bootloader/dfu/: nrf_dfu_mbr.c
bootloader/nordicsemi/sdk12/components/libraries/ic_info/: nrf_ic_info.c
bootloader/nordicsemi/sdk12/components/libraries/uart/: app_uart_fifo.c
bootloader/nordicsemi/sdk12/components/libraries/util/: app_error.c  app_error_weak.c
bootloader/nordicsemi/sdk12/components/toolchain/gcc/: Makefile.windows  nrf5x_common.ld
bootloader/nordicsemi/sdk14/components/ble/common/: ble_advdata.c
bootloader/nordicsemi/sdk14/components/device/: nrf52832_peripherals.h
bootloader/nordicsemi/sdk14/components/toolchain/gcc/: Makefile.windows
bootloader/nordicsemi/segger_rtt/: SEGGER_RTT_printf.c
bootloader/proj/: rigdfu_debug_nrf52.ld
bootloader/proj/armgcc/: Makefile  Makefile_sdk12
bootloader/proj/mdk-arm/: bootloader.uvprojx
bootloader/src/: boards.h  dfu_log.h  main.c  sdk_config.h  version.h
(+169 files in other folders)
